--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.24.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.25.1",
     "react-icons": "^4.3.1",
     "react-lottie": "^1.2.3",
     "react-router-dom": "^5.3.0",
